<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="14dp"
    android:layout_marginBottom="14dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/textViewItemDayOfWeek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:text=""
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageViewItemWeatherIcon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14sp"
        app:srcCompat="@drawable/cloudy_icon_49x29" />

    <TextView
        android:id="@+id/textViewItemTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:text="@string/textVewTemperature"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textViewItemWeahterText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:text="@string/textViewTextWeather"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textViewItemProbablyValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:text="@string/textviewPobablyValue"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textViewItemProbablyMesur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textviewProbablyMesur"
        android:textSize="20sp" />
</LinearLayout>