<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewAddWeatherParam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="30dp"
        android:text="@string/textViewAddWeatherParam"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBoxShowRainProbably"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/checkBoxShowRainProbably"
        android:textSize="18sp"
        android:onClick="checkBoxShowRainProbablyClicked"
        app:layout_constraintStart_toStartOf="@+id/checkBoxShowPressure"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxShowPressure" />

    <CheckBox
        android:id="@+id/checkBoxShowPressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/checkBoxShowPressure"
        android:textSize="18sp"
        android:onClick="checkBoxShowPressureClicked"
        app:layout_constraintStart_toStartOf="@+id/checkBoxShowWind"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxShowWind" />

    <CheckBox
        android:id="@+id/checkBoxShowWind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="32dp"
        android:text="@string/checkBoxShowWind"
        android:textSize="18sp"
        android:onClick="checkBoxShowWindClicked"
        app:layout_constraintStart_toStartOf="@+id/textViewAddWeatherParam"
        app:layout_constraintTop_toBottomOf="@+id/textViewAddWeatherParam" />

    <Button
        android:id="@+id/buttonSaveChanges"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="44dp"
        android:text="@string/buttonSaveChanges"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxShowRainProbably"
        app:layout_constraintVertical_bias="0.994" />

</androidx.constraintlayout.widget.ConstraintLayout>